--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quisquam.</p>
             </div>
             <div>
-                <img class="articlePicture" src="https://thisrentaldoesnotexist.com" alt="Article thumbnail">
+                <img class="articlePicture"
+                    src="https://images1.forrent.com/i2/-QDBSKerN4YCfMa_vyJNbfmvSCDer8jPgF0McsaSiGA/117/image.jpg"
+                    alt="Article thumbnail">
             </div>
             <div>
                 <b>Article Title</b>
